# linkerd2-proxy

./: .travis.yml  Cargo.toml
lib/router/src/: lib.rs
lib/shared-discover/: Cargo.toml
lib/shared-discover/src/: lib.rs
lib/stack/: Cargo.toml
lib/stack/src/: either.rs  layer.rs  lib.rs  make_new_service.rs  make_per_request.rs  optional.rs  stack_per_request.rs  watch.rs  when.rs
lib/task/: Cargo.toml
router/: Cargo.toml
router/src/: cache.rs
src/: addr.rs  bind.rs  dns.rs  host_port.rs  inbound.rs  lib.rs  logging.rs  outbound.rs  svc.rs  task.rs  timeout.rs
src/app/: classify.rs  config.rs  destination.rs  dst.rs  inbound.rs  main.rs  metric_labels.rs  mod.rs  outbound.rs  profiles.rs
src/control/: fully_qualified_authority.rs  mod.rs  observe.rs  pb.rs  serve_http.rs
src/ctx/: http.rs  mod.rs  transport.rs
src/endpoint/: mod.rs
src/proxy/: buffer.rs  canonicalize.rs  limit.rs  mod.rs  reconnect.rs  resolve.rs  server.rs  tcp.rs  timeout.rs
src/svc/: and_then.rs  conditional.rs  either.rs  make_per_request.rs  mod.rs  new_client_per_request.rs  optional.rs  reconnect.rs  valid.rs  watch.rs  when.rs
src/tap/: ctx.rs  daemon.rs  event.rs  grpc.rs  match_.rs  mod.rs  pb.rs  service.rs
src/telemetry/: mod.rs  process.rs  report.rs  tls_config_reload.rs
src/transparency/: client.rs  h1.rs  tcp.rs
src/transport/: connect.rs  connection.rs  connection_tests.rs  mod.rs  names.rs
stack/: Cargo.toml
stack/src/: either.rs  layer.rs
tests/: discovery.rs  profiles.rs  telemetry.rs
tests/support/: client.rs  controller.rs  mod.rs
(+60 files in other folders)
